Fix shader compilation when setting height map

Disable generating tangents if parallax mapping is enabled.
This fixes the shader compilation but means that parallax
mapping can't be used with models that don't have pre-generated
tangents.

Fixes: QTBUG-103265
Change-Id: I54a97d267ffd9efce84597571fb4d815c17aa1fc
Reviewed-by: Inho Lee <inho.lee@qt.io>
Reviewed-by: Andy Nichols <andy.nichols@qt.io>
(cherry picked from commit c00de65fec535aa3ac1238aedd362eb70573a3aa)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>